--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">LiveStreaming</string>
 
     <string name="streaming_url">http://intigralvod1-vh.akamaihd.net/i/3rdparty/Season2017_2018/10_12_2017_Hilal_fath/Highlights/high_,256,512,768,1200,.mp4.csmil/master.m3u8</string>
+
+    <string name="full_screen">Full Screen</string>
+    <string name="overlay">Overlay</string>
 </resources>
