--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
 
     <string name="full_screen">Full Screen</string>
     <string name="overlay">Overlay</string>
+
+    <string name="play_video">Play Video</string>
+    <string name="start_from">Start From</string>
+
+    <string name="message">Please enter the milli seconds to play from.</string>
+    <string name="edit_Text_hint">Enter MilliSec</string>
 </resources>
